無機能解除、ExpArrow、ExpBow（ItemBowのコピー）実装

--- a/forge1.13.2/src/main/resources/assets/undergroundmod/lang/ja_jp.json
+++ b/forge1.13.2/src/main/resources/assets/undergroundmod/lang/ja_jp.json
@@ -1,4 +1,5 @@
 {
-  "itemGroup.tabExample": "Example",
+  "itemGroup.tabUnder": "UnderGroundMods",
   "item.undergroundmod.exparrow": "ExpArrow"
+  "item.undergroundmod.expbow":"ExpBow"
 }
