--- a/forge1.13.2/src/main/resources/assets/undergroundmod/lang/ja_jp.json
+++ b/forge1.13.2/src/main/resources/assets/undergroundmod/lang/ja_jp.json
@@ -1,5 +1,7 @@
 {
   "itemGroup.tabUnder": "UnderGroundMods",
-  "item.undergroundmod.exparrow": "ExpArrow"
-  "item.undergroundmod.expbow":"ExpBow"
+  "item.undergroundmod.exparrow": "ExpArrow",
+  "item.undergroundmod.expbow":"ExpBow",
+  "item.undergroundmod.itemtest":"ItmeTest",
+  "item.undergroundmod.spawnskyroamer":"SpwnSkyRoamer"
 }
