SkyRoamerのドロップ変更、Creeperについては失敗

--- a/forge1.13.2/src/main/resources/assets/undergroundmod/lang/ja_jp.json
+++ b/forge1.13.2/src/main/resources/assets/undergroundmod/lang/ja_jp.json
@@ -3,5 +3,6 @@
   "item.undergroundmod.exparrow": "ExpArrow",
   "item.undergroundmod.expbow":"ExpBow",
   "item.undergroundmod.itemtest":"ItmeTest",
-  "item.undergroundmod.spawnskyroamer":"SpwnSkyRoamer"
+  "item.undergroundmod.spawnskyroamer":"SpwnSkyRoamer",
+  "entity.minecraft.skyroamer":"SkyRoamer"
 }
