--- a/forge1.13.2/src/main/resources/assets/undergroundmod/lang/ja_jp.json
+++ b/forge1.13.2/src/main/resources/assets/undergroundmod/lang/ja_jp.json
@@ -7,6 +7,8 @@
   "item.undergroundmod.automaticrifle":"AuntomaticRifle",
   "item.undergroundmod.magazine":"Magazine",
   "item.undergroundmod.spawnsuprob":"SupRob",
+  "item.undergroundmod.robotconnecter":"RobotConnecter",
+  "item.undergroundmod.circuit":"Circuit",
   "entity.minecraft.skyroamer":"SkyRoamer",
   "entity.minecraft.spurob":"SupRob"
 
