--- a/forge1.13.2/src/main/resources/assets/undergroundmod/lang/ja_jp.json
+++ b/forge1.13.2/src/main/resources/assets/undergroundmod/lang/ja_jp.json
@@ -10,6 +10,6 @@
   "item.undergroundmod.robotconnecter":"RobotConnecter",
   "item.undergroundmod.circuit":"Circuit",
   "entity.minecraft.skyroamer":"SkyRoamer",
-  "entity.minecraft.spurob":"SupRob"
+  "entity.undergroundmod.entitysuprob":"SupRob"
 
 }
