--- a/forge1.13.2/src/main/resources/assets/undergroundmod/lang/ja_jp.json
+++ b/forge1.13.2/src/main/resources/assets/undergroundmod/lang/ja_jp.json
@@ -15,5 +15,6 @@
   "item.undergroundmod.powercell.powercell":"PowerCell",
   "entity.minecraft.skyroamer":"SkyRoamer",
   "entity.undergroundmod.entitysuprob":"SupRob",
-  "block.undergroundmod.blockalloy":"合金ブロック"
+  "block.undergroundmod.blockalloy":"合金ブロック",
+  "block.undergroundmod.blockalloy_door":"合金ドア"
 }
